CHORE: cleanup biome config

--- a/biome.json
+++ b/biome.json
@@ -1,24 +1,9 @@
 {
 	"$schema": "node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
-		"ignore": [
-			"cdk*",
-			".infrastructure",
-			".devcontainer",
-			"dist",
-			"notes",
-			"openapi",
-			"env",
-			"coverage",
-			".private"
-		],
+		"ignore": [".devcontainer", "dist", "notes", "coverage", ".private"],
 		"ignoreUnknown": true,
-		"include": [
-			"src",
-			"example",
-			"tests",
-			"tests-e2e"
-		]
+		"include": ["src", "example", "tests", "tests-e2e"]
 	},
 	"linter": {
 		"enabled": true,
