--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "oas:split": "npx @redocly/cli split openapi/bundle.json --outDir=openapi/jsonSplit",
     "oas:tson": "npx openapi-transformer-toolkit oas2tson -i openapi/bundle.yaml -o example/oasSchemas",
     "oas:gen": "npm run oas:lint && npm run oas:bundle && npm run oas:doc && npm run oas:tson",
-    "check:gen": "npx @biomejs/biome check --write example",
+    "check:ex": "npx @biomejs/biome check --write example",
     "format": "npx @biomejs/biome format --write",
     "lint": "npx @biomejs/biome lint",
     "build": "npx tsc tson-server.ts --outDir ./dist",
-    "run:dtb": "cd src && node --experimental-strip-types cli.ts oas2dtb -i ../example/openapi/openapi.yaml -o ../example/dtb",
+    "run:dtb": "cd src && node --experimental-strip-types cli.ts oas2dtb -i ../example/openapi/openapi.yaml -o ../example/dtb && npm run check:ex",
     "start": "node ./dist/tson-server.js | npx pino-pretty",
     "everything": "npm run oas2tson && npm run build && npm run start"
   },
