--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -50,3 +46,4 @@ node_modules/
 
 # Other
 .private
+dist
