FEAT: OpenAPI updates to test parts of oas2ro; regen typebox

--- a/example/openapi/components/Comment.yaml
+++ b/example/openapi/components/Comment.yaml
@@ -13,15 +13,10 @@ components:
     CommentIdParam:
       in: path
       name: commentId
+      required: true
       schema:
-        title: CommentIdParam
-        type: object
-        properties:
-          commentId:
-            $ref: Fields.yaml#/components/schemas/CommentId
-            description: A unique identifier for a comment
-        required: 
-          -  commentId
+        $ref: Fields.yaml#/components/schemas/CommentId
+        description: A unique identifier for a comment
   schemas:
     Comment:
       title: Comment
