--- a/example/openapi/paths/api_comments_commentId.yaml
+++ b/example/openapi/paths/api_comments_commentId.yaml
@@ -5,17 +5,17 @@ get:
   security: []
   summary: GET comment endpoint for tson issue
   parameters:
-    - $ref: ../schemas/Comment.yaml#/components/parameters/CommentIdParam
+    - $ref: ../components/Comment.yaml#/components/parameters/CommentIdParam
   responses:
     '200':
       description: result
       content:
         application/json:
           schema:
-            $ref: ../schemas/Comment.yaml#/components/schemas/Comment
+            $ref: ../components/Comment.yaml#/components/schemas/Comment
     '404':
-      $ref: ../schemas/Responses.yaml#/components/responses/HTTP404NotFound
+      $ref: ../components/Responses.yaml#/components/responses/HTTP404NotFound
     '4xx':
         description: error
     '500':
-      $ref: ../schemas/Responses.yaml#/components/responses/HTTP500InternalServerError
+      $ref: ../components/Responses.yaml#/components/responses/HTTP500InternalServerError
