--- a/example/openapi/paths/api_posts_postId.yaml
+++ b/example/openapi/paths/api_posts_postId.yaml
@@ -5,13 +5,13 @@ get:
   security: []
   summary: GET post endpoint for tson issue
   parameters:
-    - $ref: ../schemas/Post.yaml#/components/parameters/PostIdParam
+    - $ref: ../components/Post.yaml#/components/parameters/PostIdParam
   responses:
     '200':
       description: result
       content:
         application/json:
           schema:
-            $ref: ../schemas/Post.yaml#/components/schemas/Post
+            $ref: ../components/Post.yaml#/components/schemas/Post
     '4xx':
         description: error
