REFACTOR: oas2dtb and oas2rtb to oas2tb; new options to control dereferencing and keywords in output

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "dtb": "./dist/src/cli.js oas2dtb -i example/openapi/openapi.yaml -o example/dtb && npm run check:ex",
     "prertb": "npm run build",
     "rtb": "./dist/src/cli.js oas2rtb -i example/openapi/openapi.yaml -o example/rtb && npm run check:ex",
-    "dtb:dev": "node --experimental-strip-types src/cli.ts oas2dtb -i example/openapi/openapi.yaml -o example/dtb && npm run check:ex",
-    "rtb:dev": "node --experimental-strip-types src/cli.ts oas2rtb -i example/openapi/openapi.yaml -o example/rtb && npm run check:ex",
+    "tbd:dev": "node --experimental-strip-types src/cli.ts oas2tb -i example/openapi/openapi.yaml -o example/tb-d && npm run check:ex",
+    "tbr:dev": "node --experimental-strip-types src/cli.ts oas2tb -i example/openapi/openapi.yaml -o example/tb-r --keeprefs --extension js && npm run check:ex",
+    "tbdkeys:dev": "node --experimental-strip-types src/cli.ts oas2tb -i example/openapi/openapi.yaml -o example/tb-keys --keepanno --ajvunsafe && npm run check:ex",
     "ro:dev": "node --experimental-strip-types src/cli.ts oas2ro -i example/openapi/openapi.yaml -o example/ro && npm run check:ex",
     "check:ex": "npx @biomejs/biome check --write example",
     "format": "npx @biomejs/biome format --write",
