--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tbd:dev": "node --experimental-strip-types src/cli.ts oas2tb -i example/openapi/openapi.yaml -o example/tb-d && npm run check:ex",
     "tbr:dev": "node --experimental-strip-types src/cli.ts oas2tb -i example/openapi/openapi.yaml -o example/tb-r --keeprefs --extension js && npm run check:ex",
     "tbdkeys:dev": "node --experimental-strip-types src/cli.ts oas2tb -i example/openapi/openapi.yaml -o example/tb-keys --keepanno --ajvunsafe && npm run check:ex",
-    "ro:dev": "node --experimental-strip-types src/cli.ts oas2ro -i example/openapi/openapi.yaml -o example/ro && npm run check:ex",
+    "rod:dev": "node --experimental-strip-types src/cli.ts oas2ro -i example/openapi/openapi.yaml -o example/rod --deref && npm run check:ex",
+    "ror:dev": "node --experimental-strip-types src/cli.ts oas2ro -i example/openapi/openapi.yaml -o example/ror && npm run check:ex",
     "check:ex": "npx @biomejs/biome check --write example",
     "format": "npx @biomejs/biome format --write",
     "lint": "npm run lint:only && npm run lint:typecheck",
