CHORE: update openapi spec to cover several cases

--- a/example/openapi/paths/api_comments_commentId.yaml
+++ b/example/openapi/paths/api_comments_commentId.yaml
@@ -6,11 +6,24 @@ get:
   summary: GET comment endpoint for tson issue
   parameters:
     - $ref: ../components/Comment.yaml#/components/parameters/CommentIdParam
+    - name: testParam
+      in: path
+      description: 'test parameter'
+      schema:
+        type: object
+        properties:
+          prop1:
+            type: string
+          prop2:
+            type: number
   responses:
     '200':
       description: result
       content:
         application/json:
+          schema:
+            $ref: ../components/Comment.yaml#/components/schemas/Comment
+        application/xml:
           schema:
             $ref: ../components/Comment.yaml#/components/schemas/Comment
     '404':
