--- a/example/openapi/paths/api_posts.yaml
+++ b/example/openapi/paths/api_posts.yaml
@@ -10,7 +10,7 @@ get:
     - name: tags
       in: query
       description: Tags to filter by
-      required: false
+      required: true
       explode: true
       schema:
         type: array
