FIX: (wip) query parameters generate correctly (except required on $ref parameters)

--- a/example/openapi/components/User.yaml
+++ b/example/openapi/components/User.yaml
@@ -53,6 +53,10 @@ components:
             $ref: Fields.yaml#/components/schemas/UserId
           userNm:
             $ref: Fields.yaml#/components/schemas/UserNm
+          inline:
+            type: string
+            minLength: 1
+            description: an inline property
   schemas:
     User:
       title: User
