--- a/example/openapi/components/Post.yaml
+++ b/example/openapi/components/Post.yaml
@@ -25,6 +25,7 @@ components:
       name: page
       in: query
       description: Page number to retrieve.
+      required: true
       schema:
         type: integer
         default: 1
@@ -32,7 +33,7 @@ components:
     PaginationLimit:
       name: limit
       in: query
-      description: Number of days per page.
+      description: Number of items per page.
       schema:
         type: integer
         default: 10
