CHORE: remove unresolvable doc reference in train travel spec

--- a/example/otherspecs/train-travel-api.yaml
+++ b/example/otherspecs/train-travel-api.yaml
@@ -45,10 +45,10 @@ security:
   - OAuth2:
       - read
 
-x-topics:
-  - title: Getting started
-    content:
-      $ref: ./docs/getting-started.md
+# x-topics:
+#   - title: Getting started
+#     content:
+#       $ref: ./docs/getting-started.md
 
 tags:
   - name: Stations
