CHORE: fix port forwarding (maybe)

--- a/.devcontainer/node-dc-compose.yaml
+++ b/.devcontainer/node-dc-compose.yaml
@@ -6,6 +6,8 @@ services:
          args:
             VARIANT: 22-bookworm
       image: node-dc
+      ports:
+      - "3080"
       volumes:
          - ..:/workspace:cached
       command: /bin/sh -c "tail -F a-file-that-does-not-exist"
