--- a/examples/blog/openapi/components/Post.yaml
+++ b/examples/blog/openapi/components/Post.yaml
@@ -65,6 +65,7 @@ components:
           $ref: Fields.yaml#/components/schemas/GenericTs
           description: The date and time when the post was put in the current status
           example: 2025-11-12T13:14:15Z
+      additionalProperties: false
       required:
         - postId
         - titleTx
@@ -93,6 +94,7 @@ components:
           $ref: Fields.yaml#/components/schemas/GenericTs
           description: The date and time when the post was put in the current status
           example: 2025-11-12T13:14:15Z
+      additionalProperties: false
       required:
         - titleTx
         - postTx
