--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -5,7 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"server": "node --experimental-strip-types server.ts | npx pino-pretty"
+		"serve:deref": "node --experimental-strip-types serverDeref.ts | npx pino-pretty",
+		"serve:ref": "node --experimental-strip-types serverRef.ts | npx pino-pretty"
 	},
 	"author": "jamee mikell (https://github.com/jmjf)",
 	"license": "MIT",
