DOCS: petstore example

--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "museum:rod": "node --experimental-strip-types src/cli.ts oas2ro -i examples/museum/openapi/openapi.yaml -o examples/museum/rod --refDir examples/museum/tbd -c oas2tb4fastify_deref.json && npm run check:ex",
     "museum:ror": "node --experimental-strip-types src/cli.ts oas2ro -i examples/museum/openapi/openapi.yaml -o examples/museum/ror --refDir examples/museum/tbr -c oas2tb4fastify_ref.json && npm run check:ex",
     "museum:all": "npm run museum:tbd && npm run museum:tbr && npm run museum:rod && npm run museum:ror && npm run check:ex",
-    "all:all": "npm run blog:all && npm run train:all && npm run museum:all",
+    "petstore:tbd": "node --experimental-strip-types src/cli.ts oas2tb -i examples/petstore/openapi/openapi.yaml -o examples/petstore/tbd -c oas2tb4fastify_deref.json && npm run check:ex",
+    "petstore:tbr": "node --experimental-strip-types src/cli.ts oas2tb -i examples/petstore/openapi/openapi.yaml -o examples/petstore/tbr -c oas2tb4fastify_ref.json && npm run check:ex",
+    "petstore:rod": "node --experimental-strip-types src/cli.ts oas2ro -i examples/petstore/openapi/openapi.yaml -o examples/petstore/rod --refDir examples/petstore/tbd -c oas2tb4fastify_deref.json && npm run check:ex",
+    "petstore:ror": "node --experimental-strip-types src/cli.ts oas2ro -i examples/petstore/openapi/openapi.yaml -o examples/petstore/ror --refDir examples/petstore/tbr -c oas2tb4fastify_ref.json && npm run check:ex",
+    "petstore:all": "npm run petstore:tbd && npm run petstore:tbr && npm run petstore:rod && npm run petstore:ror && npm run check:ex",
+    "all:all": "npm run blog:all && npm run train:all && npm run museum:all && npm run petstore:all",
     "check:ex": "npx @biomejs/biome check --write examples",
     "format": "npx @biomejs/biome format --write",
     "lint": "npm run lint:only && npm run lint:typecheck",
