--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "foast": "./dist/src/cli.ts"
   },
   "scripts": {
-    "test": "",
+    "test": "c8 node --import ./tsnode-esm.mjs --test test/**/*.test.ts",
     "oas:lint": "npx @redocly/cli lint examples/blog/openapi/openapi.yaml",
     "oas:doc": "npx @redocly/cli build-docs examples/blog/openapi/openapi.yaml -o=examples/blog/openapi/api-docs.html",
     "blog:tbd": "node --experimental-strip-types src/cli.ts oas2tb -i examples/blog/openapi/openapi.yaml -o examples/blog/tbd -c oas2tb4fastify_deref.json",
@@ -52,8 +52,10 @@
     "@biomejs/biome": "^1.9.4",
     "@sinclair/typebox": "^0.34.24",
     "@types/node": "^22.13.4",
+    "c8": "^10.1.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "ts-node-maintained": "^10.9.5",
     "typescript": "^5.7.3"
   },
   "lint-staged": {
