TESTS: exclude fixtures from format/lint to avoid breaking tests

--- a/biome.json
+++ b/biome.json
@@ -1,20 +1,9 @@
 {
 	"$schema": "node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
-		"ignore": [
-			".devcontainer",
-			"dist",
-			"notes",
-			"coverage",
-			".private"
-		],
+		"ignore": [".devcontainer", "dist", "notes", "coverage", ".private", "test/fixtures"],
 		"ignoreUnknown": true,
-		"include": [
-			"src",
-			"examples",
-			"test",
-			"dist"
-		]
+		"include": ["src", "examples", "test", "dist"]
 	},
 	"linter": {
 		"enabled": true,
